<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center"
                android:background="@drawable/back_ground_layout">
                <ImageView
                    android:id="@+id/bookAppointment_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/calender1"
                    android:paddingTop="@dimen/padding_top_image"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/book_appointment"
                    />



            </LinearLayout>

            <LinearLayout android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center"
                android:background="@drawable/back_ground_layout">
                <ImageView
                    android:id="@+id/eServices_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/eservices"
                    android:paddingTop="@dimen/padding_top_image"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/eServices"
                    android:padding="@dimen/padding_text"/>



            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center"
                android:background="@drawable/back_ground_layout">
                <ImageView
                    android:id="@+id/myDoctor_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/my_doctor"
                    android:paddingTop="@dimen/padding_top_image"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/my_doctor"
                    android:padding="@dimen/padding_text"/>



            </LinearLayout>

            <LinearLayout android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center"
                android:background="@drawable/back_ground_layout">
                <ImageView
                    android:id="@+id/radiology_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/rays"
                    android:paddingTop="@dimen/padding_top_image"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radiology"
                    android:padding="@dimen/padding_text"/>



            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center"
                android:background="@drawable/back_ground_layout">
                <ImageView
                    android:id="@+id/labResult_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/lab_result"
                    android:paddingTop="@dimen/padding_top_image"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lab_result"
                    android:padding="@dimen/padding_text"/>



            </LinearLayout>

            <LinearLayout android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center"
                android:background="@drawable/back_ground_layout">
                <ImageView
                    android:id="@+id/prescription_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/medical_prescription"
                    android:paddingTop="@dimen/padding_top_image"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/prescription"
                    android:padding="@dimen/padding_text"/>



            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center"
                android:background="@drawable/back_ground_layout">
                <ImageView
                    android:id="@+id/vitalSigns_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/vital_signs"
                    android:paddingTop="@dimen/padding_top_image"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vital_signs"
                    android:padding="@dimen/padding_text"/>



            </LinearLayout>

            <LinearLayout android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center"
                android:background="@drawable/back_ground_layout">
                <ImageView
                    android:id="@+id/tracker_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/tracker"
                    android:paddingTop="@dimen/padding_top_image"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/my_tracker"
                    android:padding="@dimen/padding_text"/>



            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center"
                android:background="@drawable/back_ground_layout">
                <ImageView
                    android:id="@+id/eye_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/eye"
                    android:paddingTop="@dimen/padding_top_image"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/eyr_measurement"
                    android:padding="@dimen/padding_text"/>



            </LinearLayout>

            <LinearLayout android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center"
                android:background="@drawable/back_ground_layout">
                <ImageView
                    android:id="@+id/vaccine_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/vaccine"
                    android:paddingTop="@dimen/padding_top_image"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vaccine"
                    android:padding="@dimen/padding_text"/>



            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center"
                android:background="@drawable/back_ground_layout">
                <ImageView
                    android:id="@+id/childVaccine_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/child_vaccine"
                    android:paddingTop="@dimen/padding_top_image"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/child_vaccine"
                    android:padding="@dimen/padding_text"/>



            </LinearLayout>

            <LinearLayout android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center"
                android:background="@drawable/back_ground_layout">
                <ImageView
                    android:id="@+id/family_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/family_files"
                    android:paddingTop="@dimen/padding_top_image"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/my_family_files"
                    android:padding="@dimen/padding_text"/>



            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center"
                android:background="@drawable/back_ground_layout">
                <ImageView
                    android:id="@+id/sickLeaves_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/sick_leaves"
                    android:paddingTop="@dimen/padding_top_image"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sick_leaves"
                    android:padding="@dimen/padding_text"/>



            </LinearLayout>

            <LinearLayout android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center"
                android:background="@drawable/back_ground_layout">
                <ImageView
                    android:id="@+id/monthlyReports_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/reports"
                    android:paddingTop="@dimen/padding_top_image"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/monthly_reports"
                    android:padding="@dimen/padding_text"/>



            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center"
                android:background="@drawable/back_ground_layout">
                <ImageView
                    android:id="@+id/requestMedicalReport_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/request_medical_report"
                    android:paddingTop="@dimen/padding_top_image"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/request_medical_report"
                    android:padding="@dimen/padding_text"/>



            </LinearLayout>

            <LinearLayout android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center"
                android:background="@drawable/back_ground_layout">
                <ImageView
                    android:id="@+id/insuranceCard_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/insurance_card"
                    android:paddingTop="@dimen/padding_top_image"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Insurance_card"
                    android:padding="@dimen/padding_text"/>



            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center"
                android:background="@drawable/back_ground_layout">
                <ImageView
                    android:id="@+id/approvals_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/approvals"
                    android:paddingTop="@dimen/padding_top_image"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/approvals"
                    android:padding="@dimen/padding_text"/>



            </LinearLayout>

            <LinearLayout android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center"
                android:background="@drawable/back_ground_layout">
                <ImageView
                    android:id="@+id/lifeChat_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/livechat"
                    android:paddingTop="@dimen/padding_top_image"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/live_chat"
                    android:padding="@dimen/padding_text"/>



            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center"
                android:background="@drawable/back_ground_layout">
                <ImageView
                    android:id="@+id/notification_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/notification"
                    android:paddingTop="@dimen/padding_top_image"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/notification"
                    android:padding="@dimen/padding_text"/>



            </LinearLayout>

            <LinearLayout android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center"
                android:background="@drawable/back_ground_layout">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/my_doctor"
                    android:paddingTop="@dimen/padding_top_image"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:padding="@dimen/padding_text"/>



            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


</ScrollView>